--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "eslint": "^3.12.2"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "eslint": "^3.12.2",
-    "eslint-plugin-react": "^6.8.0"
+    "eslint-plugin-react": "^6.8.0",
+    "grunt": "^1.0.1",
+    "karma": "^1.3.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.3.0",
+    "mocha": "^3.2.0"
   },
   "scripts": {
-    "test": "./node_modules/.bin/eslint ./*"
+    "test": "eslint ./*"
   },
   "author": "Jordan M. Scholten",
   "license": "ISC"
