--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "eslint": "^3.12.2"
+    "eslint": "^3.12.2",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0"
   },
   "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "chai": "^3.5.0",
     "eslint": "^3.12.2",
     "eslint-plugin-react": "^6.8.0",
@@ -15,10 +22,12 @@
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-mocha": "^1.3.0",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "webpack": "^1.14.0"
   },
   "scripts": {
-    "test": "mocha"
+    "build": "webpack",
+    "test": "karma start"
   },
   "author": "Jordan M. Scholten",
   "license": "ISC"
