--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "eslint-plugin-react": "^6.8.0",
     "grunt": "^1.0.1",
     "karma": "^1.3.0",
+    "karma-babel-preprocessor": "^6.0.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
     "karma-mocha": "^1.3.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.1",
     "mocha": "^3.2.0",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   },
   "scripts": {
     "build": "webpack",
