--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "eslint": "^3.12.2",
+    "express": "^4.14.0",
+    "mysql": "^2.12.0",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
