--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
-    "react-router": "^3.0.0"
+    "react-router": "^3.0.0",
+    "reactjs-bootstrap-table": "^1.0.12"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
