--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "dependencies": {
     "eslint": "^3.12.2",
     "express": "^4.14.0",
+    "fixed-data-table": "^0.6.3",
     "mysql": "^2.12.0",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
-    "react-router": "^3.0.0",
-    "reactjs-bootstrap-table": "^1.0.12"
+    "react-router": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
