--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "eslint": "^3.12.2",
     "express": "^4.14.0",
     "fixed-data-table": "^0.6.3",
