--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "eslint": "^3.12.2",
     "express": "^4.14.0",
     "fixed-data-table": "^0.6.3",
+    "googlemaps": "^1.12.0",
     "mysql": "^2.12.0",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
-    "react-router": "^3.0.0"
+    "react-router": "^3.0.0",
+    "request": "^2.79.0"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
